--- a/templates/dashnew.html
+++ b/templates/dashnew.html
@@ -325,6 +325,12 @@
         });
     });
 </script>
+
+
+  </div>
+  {% endfor %}
+</div>
+{% endif %}
     
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script>
